# haskell-online-dojo

./: .dir-locals.el  .gitignore  README.md  beck.sh  haskell-sqlite.cabal  stack.yaml
.circleci/: config.yml
app/: Main.hs
djambi/: .gitignore  ChangeLog.md  README.md  TAGS  package.yaml
djambi/app/: Main.hs
djambi/src/: Djambi.hs
djambi/src/Djambi/: Game.hs  GameState.hs  Piece.hs  Position.hs  Server.hs  User.hs
djambi/test/: DjambiSpec.hs
djambi/test/Djambi/: GameSpec.hs  ServerSpec.hs
haskell-sqlite/: TAGS  haskell-sqlite.cabal  stack.yaml
haskell-sqlite/app/: Main.hs
haskell-sqlite/src/: Sql.hs  Variance.hs
haskell-sqlite/src/Sql/: DB.hs  Relational.hs
haskell-sqlite/src/Sql/DB/: VectorDB.hs
haskell-sqlite/test/: ConsoleSpec.hs  KataPotterSpec.hs
haskell-sqlite/test/Sql/DB/: VectorDBSpec.hs
saison3/: .gitignore  ChangeLog.md  README.md  day1-input.txt  package.yaml
saison3/app/: Main.hs
saison3/src/: Api.hs  Intcode.hs  Lib.hs
saison3/test/: AdventOfCode1Spec.hs  AdventOfCode3Spec.hs  AdventOfCodeIntcodeSpec.hs  Intcode.hs  ServerSpec.hs  TennisSpec.hs  VacuumbaSpec.hs
src/: Interpreter.hs  Sql.hs
src/Sql/: DB.hs  Evaluator.hs  Parser.hs  Relational.hs
src/Sql/DB/: MapDB.hs  Vector.hs  VectorDB.hs
test/: ConsoleSpec.hs  KataPotterSpec.hs  SqlSpec.hs
test/Sql/DB/: VectorDBSpec.hs  VectorSpec.hs
