name:                haskell-sqlite
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/haskell-sqlite#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Interpreter, Sql, Sql.DB, Sql.DB.Vector
  ghc-options: -Wall -Werror -fno-warn-orphans
  other-modules:  Sql.Parser, Sql.Evaluator
  build-depends:       base
                     , cereal
                     , mtl
                     , text
                     , parsec
                     , containers
                     , vector
  default-language:    Haskell2010

executable haskell-sqlite-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskell-sqlite
  default-language:    Haskell2010

test-suite haskell-sqlite-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , cereal
                     , haskell-sqlite
                     , hspec
                     , hspec-discover
                     , mtl
                     , QuickCheck
                     , text
                     , vector
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/haskell-sqlite
